--- a/Arcules.html
+++ b/Arcules.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Arcules gaming</title>
+<title>Arcule gaming</title>
 <style>
   body {
     background-image: url(wallpaper.jpg);
