Made some quality of life changes
Changed the hrefs to #s, just in case something happens. Changed the text for the alt in case the image doesn't load. The text is more descriptive of the photo.

--- a/Arcules.html
+++ b/Arcules.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Arcule gaming</title>
+<title>Arcules gaming</title>
 <style>
   body {
     background-image: url(wallpaper.jpg);
@@ -91,13 +91,13 @@ body {
 </head>
 <body>
 <div class="topnav">
-  <a href="#"> <img src="logo.jpg" alt="shields of technology logo" width="60" height="50"> </a>
+  <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the end bottom." width="60" height="50"> </a>
 <a class="active" href="Arcules.html">Home</a>
-  <a href="riveit2.html">the world of gaming</a>
-  <a href="riveit3.html">phones</a>
-  <a href="riveit4.html">laptops</a>
-  <a href="riveit5.html">consoles</a>
-    <a href="riveit5.html">GAMING</a>
+  <a href="#">the world of gaming</a>
+  <a href="#">phones</a>
+  <a href="#">laptops</a>
+  <a href="#">consoles</a>
+    <a href="#">GAMING</a>
   <div class="search-container">
     <form action="https://www.google.com/search">
         <input type="text" name="q" placeholder="Search">
