Fixed grammar mistake
Fixed a grammar mistake that might confuse readers who don't get the logo and get the alt text instead.

--- a/Arcules.html
+++ b/Arcules.html
@@ -91,7 +91,7 @@ body {
 </head>
 <body>
 <div class="topnav">
-  <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the end bottom." width="60" height="50"> </a>
+  <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the bottom." width="60" height="50"> </a>
 <a class="active" href="Arcules.html">Home</a>
   <a href="#">the world of gaming</a>
   <a href="#">phones</a>
