Added some extras
Added some eztras to set the framwork like making the document an XHTML document and setting the language.

--- a/Arcules.html
+++ b/Arcules.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<meta charset="utf-8" />
 <title>Arcules gaming</title>
 <style>
   body {
@@ -91,7 +92,7 @@ body {
 </head>
 <body>
 <div class="topnav">
-  <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the bottom." width="60" height="50"> </a>
+  <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the bottom." width="60" height="50"/> </a>
 <a class="active" href="Arcules.html">Home</a>
   <a href="#">the world of gaming</a>
   <a href="#">phones</a>
@@ -100,7 +101,7 @@ body {
     <a href="#">GAMING</a>
   <div class="search-container">
     <form action="https://www.google.com/search">
-        <input type="text" name="q" placeholder="Search">
+        <input type="text" name="q" placeholder="Search"/>
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
