--- a/Arcules.html
+++ b/Arcules.html
@@ -7,7 +7,7 @@
 <style>
   body {
     background-image: url(wallpaper.jpg);
-    background-repeat: no repeat;
+    background-repeat: no-repeat;
     background-size: cover;
   }
   h2 {
@@ -105,7 +105,6 @@ body {
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
-</div>
 </div>
 <h2 style="color:#5296a3;">Where The Gaming Begins!</h2>
 </body>
