Added navigation files
I added the framwork for the files that hte navigation menu takes you to. We just have to figure out what the content is and then we can work on those files. I took out the #s because we needed to direct to something. I also took out the header because we don't what content we are doing yet. I changed the title for each page so that the title is relevant to the content of the page.

--- a/Phones.html
+++ b/Phones.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
+
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-<meta charset="utf-8" />
-<title>Arcules Gaming</title>
-<style>
-  body {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <meta charset="utf-8" />
+    <title>Arcules Gaming: Phones</title>
+    <style>body {
     background-image: url(wallpaper.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -87,15 +87,14 @@ body {
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
-}
-</style>
+}</style>
 </head>
 <body>
-<div class="topnav">
+    <div class="topnav">
   <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the bottom." width="60" height="50"/> </a>
-<a class="active" href="Arcules.html">Home</a>
+<a href="Arcules.html">Home</a>
   <a href="World of Gaming.html">The World of Gaming</a>
-  <a href="Phones.html">Phones</a>
+  <a class="active" href="Phones.html">Phones</a>
   <a href="Laptops.html">Laptops</a>
   <a href="Consoles.html">Consoles</a>
     <a href="Games.html">Games</a>
@@ -106,6 +105,5 @@ body {
     </form>
   </div>
 </div>
-<h2 style="color:#5296a3;">Where The Gaming Begins!</h2>
 </body>
 </html>
