Added some more text
Added some more text to describe the website. Need help with text alignment.

--- a/Arcules.html
+++ b/Arcules.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
 <meta charset="utf-8" />
+
 <title>Arcules Gaming</title>
+
 <style>
   body {
     background-image: url(wallpaper.jpg);
@@ -14,6 +20,8 @@
   text-align: center;
   font-family: Autowide;
   font-size: 150px;
+  position: absolute;
+  top: -65px;
 }
 * {box-sizing: border-box;}
 
@@ -72,6 +80,15 @@ body {
   background: #ccc;
 }
 
+p {
+    font-size: 50px;
+    color: #5296a3;
+    text-align: center;
+    font-family: Autowide;
+    position: absolute;
+    top: 500px;
+}
+
 @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
@@ -106,6 +123,10 @@ body {
     </form>
   </div>
 </div>
-<h2 style="color:#5296a3;">Where The Gaming Begins!</h2>
+
+<h2 style="color:#5296a3;" >Where The Gaming Begins!</h2>
+
+    <p>Welcome to Arcules Gaming!</p>
+
 </body>
 </html>
