Changed some colors, made it look nicer...
I changed some colors so it would match the website theme which was #37a7c0. Added a paragraph and made it centered to state our website name. On the login, I again matched some colors to theme, fixed some spelling errors and fixed some grammar. I also fixed the background and made some things bigger for better seeability. Is that even a word?

--- a/Arcules login.html
+++ b/Arcules login.html
@@ -4,18 +4,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>login</title>
+<title>Arcules Gaming: Login</title>
 <style>
   body {
-    background-image: url(logo.jpg);
-    background-repeat: no repeat;
+    background-image: url(wallpaper.jpg);
     background-size: cover;
   }
   h2 {
-    color: dodgerblue;
+    color: #37a7c0;
   }
   p {
-    color: green;
+    color: #f13333;
+    font-size: 20px;
   }
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
@@ -29,8 +29,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .icon {
   padding: 10px;
-  background: grey;
-  color: white;
+  background: #37a7c0;
+  color: #ffffff;
   min-width: 50px;
   text-align: center;
 }
@@ -47,8 +47,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for the submit button */
 .btn {
-  background-color: grey;
-  color: white;
+  background-color: #37a7c0;
+  color: #ffffff;
   padding: 15px 20px;
   border: none;
   cursor: pointer;
@@ -64,7 +64,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <body>
 
 <form action="Arcules.html" style="max-width:500px;margin:auto">
-  <h2>Login please!</h2>
+  <h2>Please login...</h2>
   <div class="input-container">
     <i class="fa fa-user icon"></i>
     <input class="input-field" type="text" placeholder="Username" name="usrnm">
@@ -73,8 +73,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <i class="fa fa-key icon"></i>
     <input class="input-field" type="password" placeholder="Password" name="psw">
   </div>
-  <button type="submit" class="btn">Login</button>
-  <p>Did not create a account yet?<a href="riveit login2.html" style="color:blue">click here to create one</a>.</p>
+  <button type="submit" class="btn" style="font-size:15px;">Login</button>
+  <p>Don't have an account yet? <a href="#" style="color:blue">Create one!</a>.</p>
 </form>
 </body>
 </html>
