--- a/Arcules.html
+++ b/Arcules.html
@@ -50,7 +50,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #13bab2;
+  background-color: #37a7c0;
   color: white;
 }
 
@@ -81,12 +81,12 @@ body {
 }
 
 p {
-    font-size: 50px;
-    color: #5296a3;
+    font-size: 75px;
+    color: #f13333;
     text-align: center;
     font-family: Autowide;
-    position: absolute;
-    top: 500px;
+    position: relative;
+    top: 325px;
 }
 
 @media screen and (max-width: 600px) {
@@ -124,9 +124,9 @@ p {
   </div>
 </div>
 
-<h2 style="color:#5296a3;" >Where The Gaming Begins!</h2>
+<h2 style="color:#37a7c0;" >Where The Gaming Begins!</h2>
 
-    <p>Welcome to Arcules Gaming!</p>
+    <p>Welcome to <b>Arcules Gaming!</b></p>
 
 </body>
 </html>
