--- a/Arcules login.html
+++ b/Arcules login.html
@@ -74,7 +74,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <input class="input-field" type="password" placeholder="Password" name="psw">
   </div>
   <button type="submit" class="btn" style="font-size:15px;">Login</button>
-  <p>Don't have an account yet? <a href="#" style="color:blue">Create one!</a>.</p>
+  <p>Don't have an account yet? <a href="#" style="color:blue">Create one!</a></p>
 </form>
 </body>
 </html>
