Added flipcards distinction.

--- a/Games.html
+++ b/Games.html
@@ -334,11 +334,11 @@
 
                             <div class="flip-card-back">
 
-                                <h1>pes 21</h1>
+                                <h1>PES 21</h1>
 
-                                <p>pes 21 is a really good game it combines the users skill,technique, and common sense</p>
+                                <p>PES 21 is a really good game it combines the user's skill, technique, and common sense in a soccer game to make it more realistic.</p>
 
-                                <p>Our rating for this game is:</p>
+                                <p>Rating:</p>
 
                                 <span class="fa fa-star checked"></span>
 
@@ -380,13 +380,11 @@
 
                             <div class="flip-card-back">
 
-                                <h1>PES 21</h1>
+                                <h1>FIFA 21</h1>
 
-                                <p>pes 21 is a really good game it combines the users skill,technique, and common sense</p>
+                                <p>FIFA 21 is the official licensed game for the FIFA organization. It's a soccer game that has more arcade aspects but contains almost all of the clubs out there.</p>
 
-                                <p>Our rating for this game is:</p>
-
-                                <span class="fa fa-star checked"></span>
+                                <p>Rating:</p>
 
                                 <span class="fa fa-star checked"></span>
 
@@ -394,7 +392,9 @@
 
                                 <span class="fa fa-star checked"></span>
 
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star checked"></span>
+
+                                <span class="fa fa-star checked"></span>
 
                                 <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 
@@ -426,13 +426,11 @@
 
                             <div class="flip-card-back">
 
-                                <h1>pes 21</h1>
+                                <h1>Minecraft</h1>
 
-                                <p>pes 21 is a really good game it combines the users skill,technique, and common sense</p>
+                                <p>Minecraft is a sandbox game where you can create anything you want with blocks.</p>
 
-                                <p>Our rating for this game is:</p>
-
-                                <span class="fa fa-star checked"></span>
+                                <p>Rating:</p>
 
                                 <span class="fa fa-star checked"></span>
 
@@ -440,7 +438,9 @@
 
                                 <span class="fa fa-star checked"></span>
 
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star checked"></span>
+
+                                <span class="fa fa-star checked"></span>
 
                                 <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
 
@@ -472,19 +472,19 @@
 
                             <div class="flip-card-back">
 
-                                <h1>pes 21</h1>
+                                <h1>The Crew 2</h1>
 
-                                <p>pes 21 is a really good game it combines the users skill,technique, and common sense</p>
+                                <p>The Crew 2 is a racing game produced by Ubisoft. It has a unique 4 different modes and has a more arcade feel.</p>
 
-                                <p>Our rating for this game is:</p>
-
-                                <span class="fa fa-star checked"></span>
+                                <p>Rating:</p>
 
                                 <span class="fa fa-star checked"></span>
 
                                 <span class="fa fa-star checked"></span>
 
                                 <span class="fa fa-star checked"></span>
+
+                                <span class="fa fa-star"></span>
 
                                 <span class="fa fa-star"></span>
 
@@ -518,9 +518,9 @@
 
                             <div class="flip-card-back">
 
-                                <h1>pes 21</h1>
+                                <h1>Fortnite</h1>
 
-                                <p>pes 21 is a really good game it combines the users skill,technique, and common sense</p>
+                                <p>Fortnite is a popular battle-royale game that contains cartoon aspects. It has a unique building feature.</p>
 
                                 <p>Our rating for this game is:</p>
 
@@ -528,13 +528,13 @@
 
                                 <span class="fa fa-star checked"></span>
 
-                                <span class="fa fa-star checked"></span>
-
-                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
 
                                 <span class="fa fa-star"></span>
 
-                                <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
+                                <span class="fa fa-star"></span>
+
+                                <i onclick="myFunction(this)" class="fa fa-thumbs-down"></i>
 
                                 <a href="https://www.pesmaster.com/" class="button">Link Button</a>
 
