Rearranged menu and added blog.
I rearranged menu itmes from most important to leat important. On our menu, that means left to right. I also added a blog button for the menu and plan on adding a blog. I would use flipcards for the blog copy some stuff from Games.html. More to come...

--- a/Games.html
+++ b/Games.html
@@ -291,19 +291,25 @@
 
         <div class="topnav">
 
-            <a href="#"> <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the bottom." width="60" height="50"/> </a>
+            <a href="#">
+                
+                <img src="logo.jpg" alt="Arcules Gaming logo, a neon A with Arcules gaming at the bottom." width="60" height="50"/>
 
-            <a  href="Arcules.html">Home</a>
+            </a>
+            
+            <a href="Arcules.html">Home</a>
 
             <a href="World of Gaming.html">The World of Gaming</a>
 
-            <a href="Phones.html">Phones</a>
-
-            <a href="Laptops.html">Laptops</a>
+            <a class="active" href="Games.html">Games</a>
 
             <a href="Consoles.html">Consoles</a>
 
-            <a class="active" href="#">Games</a>
+            <a href="Laptops.html">Laptops</a>
+
+            <a href="Phones.html">Phones</a>
+
+            <a href="Blog.html">Blog</a>
 
             <div class="search-container">
 
