--- a/Laptops.html
+++ b/Laptops.html
@@ -146,13 +146,15 @@
 
             <a href="World of Gaming.html">The World of Gaming</a>
 
-            <a class="active" href="Phones.html">Phones</a>
-
-            <a href="Laptops.html">Laptops</a>
+            <a href="Games.html">Games</a>
 
             <a href="Consoles.html">Consoles</a>
 
-            <a href="Games.html">Games</a>
+            <a class="active" href="Laptops.html">Laptops</a>
+
+            <a href="Phones.html">Phones</a>
+
+            <a href="Blog.html">Blog</a>
             
             <div class="search-container">
                 
