Added blog and content.
I added content for World of Gaming, although, I think it should be deleted. It was just 1 line that I thought fit the topic. The titles got messed up for some of the pages and I fixed that. I also added the blog page and I am waiting for content from Vighnesh. I probably fixed some spaces as well.

--- a/Games.html
+++ b/Games.html
@@ -8,7 +8,7 @@
 
         <meta charset="utf-8" />
 
-        <title>Arcules Gaming</title>
+        <title>Arcules Gaming: Games</title>
 
         <style>
 
@@ -577,7 +577,7 @@
 
                                 <p>Fortnite is a popular battle-royale game that contains cartoon aspects. It has a unique building feature.</p>
 
-                                <p>Our rating for this game is:</p>
+                                <p>Rating:</p>
 
                                 <span class="fa fa-star checked"></span>
 
