Overviewed this code
Overviewed this code and added some comments

--- a/Arcules.html
+++ b/Arcules.html
@@ -36,7 +36,7 @@
             }
             
             .topnav {
-                overflow: hidden;
+                overflow: hidden;/*This means overflowed content will be hidden inside the parent element*/
             background-color: black;
 
             }
